feat: replace Environment Browser with Preview
